[tool.poetry]
name = "lego"
version = "1.0.0"
description = ""
authors = ["Kunal Singh <kunalsin9h@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pytest = "^8.1.1"
requests = "^2.12.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
